Fix: Body overlaps header when scrolling #13

--- a/less/style.less
+++ b/less/style.less
@@ -64,7 +64,7 @@ a, a:hover, a:visited, a:link {
   top: 0;
   letter-spacing: 1px;
   padding: 12px 10px;
-  z-index: 1;
+  z-index: 3;
 
   .login {
     top: inherit;
